<resources>
    <string name="app_name">Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pricing">Pricing</string>
    <string name="faq">FAQ</string>
    <string name="features">Features</string>
    <string name="showcase">Showcase</string>
    <string name="home">Home</string>
</resources>