<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item android:id="@+id/home"
            android:icon="@drawable/nav_menu_home"
            android:title="@string/home" />

        <item android:id="@+id/showcase"
            android:icon="@drawable/nav_menu_showcase"
            android:title="@string/showcase" />

        <item android:id="@+id/features"
            android:icon="@drawable/nav_menu_features"
            android:title="@string/features" />

        <item android:id="@+id/faq"
            android:icon="@drawable/nav_menu_faq"
            android:title="@string/faq" />

        <item android:id="@+id/pricing"
            android:icon="@drawable/nav_menu_pricing"
            android:title="@string/pricing" />


    </group>

</menu>